--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
   <body>
     <div class="container">
         <header class="header">
-            Header
+            <img class="logo" src="img/logo.png" alt="trillo logo">
+            <form class="search" action="#">
+                <input class="search__input" type="text" placeholder="Search Hotels">
+                <button class="search__button">
+                   <svg class="search__icon">
+                       <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+                   </svg> 
+                </button>
+            </form>
         </header>
         <div class="content">
             <nav class="sidebar">
